
 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation
                      
* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier 

* 2014-07-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 33478: Run AttachmentCleaner without delay

* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key
 - Fix for bug 33396: Try to recover from malformed Content-Type value like ``=?windows-1252?q?application/pdf; name="blatt8.pdf"´´
 - Fix for bug 33374: Check for null prior to JSON conversion
 - Fix for bug 31610: Introduced a rate limiter when checking for new mails; allowing not more than one run per 5 seconds

* 2014-07-09 - marc.arens@open-xchange.com

 - Fix for bug 27301: A MembershipListener recognizes a leaving hazelcast node and triggers a cleanup for its resources
 
* 2014-07-09 - martin.schneider@open-xchange.com

 - Fix for bug 33201: improved output if parameter is missing

* 2014-07-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 33485: Don't attempt to delete an empty list of files

* 2014-07-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 32489: Exclude special messenger files and folders from drive synchronization

* 2014-07-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 33412: Use larger chunks when performing multipart uploads to S3 stores
 - Fix for bug 33422: Made the setting "com.openexchange.filestore.s3.[filestoreID].pathStyleAccess" officially available in the 
                      configuration file "filestore-s3.properties"  
